<resources>
    <string name="app_name">MobileCooking</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="facebook_app_id">1700372913583385</string>
    <string name="recipe_description">Description</string>
    <string name="recipe_name">Recipe Title</string>
    <string name="recipe_ingredients">Ingredients</string>
    <string name="add_image">Add Image</string>
    <string name="btn_save_recipe">Save</string>
    <string name="action_add_recipe">Add Recipe</string>
</resources>
