<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pingvini.mobilecooking.RecipeAddActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/recipe_name"
        android:id="@+id/recipe_name_edit"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recipe_desc_edit"
        android:inputType="textMultiLine"
        android:lines="6"
        android:gravity="top"
        android:hint="@string/recipe_description"
        android:layout_marginTop="15dp"
        android:layout_below="@id/recipe_name_edit"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/recipe_ingredients"
        android:id="@+id/recipe_ingredients_edit"
        android:layout_below="@id/recipe_desc_edit"
        />

    <Button
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/recipe_ingredients_edit"
        android:layout_centerHorizontal="true"
        android:text="@string/add_image"
        android:id="@+id/btn_add_image"
        />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_add_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/recipe_add_image"
        />

    <Button
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_add_image"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_save_recipe"
        android:id="@+id/btn_save_recipe"
        />

</RelativeLayout>


